boulder/boulder/tests/compile_fail/function/unresolvable_int.bo
# multiple possible types
# `u8`
# `u16`
# `u32`
# (8:

fn test() {
    let a = 7;
    a + 7 * 3;
}